ajout dossier video pour structurer

--- a/html/index.html
+++ b/html/index.html
@@ -13,21 +13,21 @@
          <div class="box">
             <h2>Monkey Flip :</h2>
             <video controls>
-               <source src="Monkey Flip_360p.mp4" type="video/mp4">
+               <source src="video/Monkey Flip_360p.mp4" type="video/mp4">
             </video>
          </div>
 
          <div class="box">
             <h2>A mimir monkey :</h2>
             <video controls>
-               <source src="a_mimir_monkey.mp4" type="video/mp4">
+               <source src="video/a_mimir_monkey.mp4" type="video/mp4">
             </video>
          </div>
 
          <div class="box">
             <h2>Go Back i want to be monke Meme :</h2>
             <video controls>
-               <source src="Go Back i want to be monke Meme_480p.mp4" type="video/mp4">
+               <source src="video/Go Back i want to be monke Meme_480p.mp4" type="video/mp4">
             </video>
          </div>
 
