modification des vidéos

--- a/html/index.html
+++ b/html/index.html
@@ -11,23 +11,23 @@
          <h1>Vidéos à la demande | Equipe 4</h1>
 
          <div class="box">
-            <h2>Monkey Flip :</h2>
-            <video controls>
-               <source src="video/Monkey Flip_360p.mp4" type="video/mp4">
+            <h2>Obi-Wan Kenobi trailer :</h2>
+            <video width="640" heigth="480" controls>
+               <source src="video/OBIWAN KENOBI Bande Annonce VF 2022_v144P.mp4" type="video/mp4" >
             </video>
          </div>
 
          <div class="box">
-            <h2>A mimir monkey :</h2>
-            <video controls>
-               <source src="video/a_mimir_monkey.mp4" type="video/mp4">
+            <h2>Combat Obi-Wan vs Anakin :</h2>
+            <video width="640" heigth="480" controls>
+               <source src="video/star wars 3 nouvelle empire et tu étais lélu VF_v240P.mp4" type="video/mp4">
             </video>
          </div>
 
          <div class="box">
-            <h2>Go Back i want to be monke Meme :</h2>
-            <video controls>
-               <source src="video/Go Back i want to be monke Meme_480p.mp4" type="video/mp4">
+            <h2>Hello there :</h2>
+            <video width="640" heigth="480" controls>
+               <source src="video/Hello There_480p.mp4" type="video/mp4">
             </video>
          </div>
 
